# Training-Dynamics-of-Deep-Learning

./: .gitignore  DLN.py  README.md  SGF.py  TODO.txt  analysis.py  analyze_gph.py  benchmark.sh  benchmark_cpu.sh  benchmark_gpu.sh  benchmark_metrics.py  claude.txt  comparative_trainer.py  configs.py  data_format.md  data_utils.py  experiment_builder.py  experiment_examples.py  experiment_fig2.py  extended_runs.sh  find_optimal_config.py  gc_diagnostic.py  gp_test.sh  gph_100.sh  gph_analysis.py  gph_experiments.sh  gph_experiments_loss_only.sh  gph_many_runs.sh  gph_online_loss_only.sh  gph_seed_model.py  gph_underparameterised.sh  identity_teacher.py  metrics.py  modal_sweep.py  notebook_utils.py  plot_100.py  plotting.py  pyproject.toml  requirements-dev.txt  requirements.txt  (+16 more)
analysis/: _cache.py  _common.py  _lr_sweep_common.py  _parallel.py  _stats.py  batch_distance_power_law.py  erank.py  gph_analysis_loss_only.py  gph_analysis_metrics.py  gph_comparative_metrics.py  gph_gd_model_metrics.py  gph_model_metrics.py  gph_online_comparative_metrics.py  hessian_spectrum.py  lr_sweep.py  lr_sweep_layer_sv.py  lr_sweep_loss_compare.py  lr_sweep_sv.py  lr_sweep_sv_ratio.py  plot_underparameterized.py  rank_analysis.py  seed_distance_power_law.py  sv_dynamics.py  sv_dynamics_d_active.py  sv_dynamics_topk.py
cache/: gph_sweep_stats.pkl
dln/: __init__.py  batched.py  callbacks.py  comparative.py  config.py  data.py  experiment.py  factory.py  jobs.py  metrics.py  model.py  overrides.py  plotting.py  resolvers.py  results.py  results_io.py  run.py  run_comparative.py  (+3 more)
(+8483 files in other folders)
